/*
 * Copyright 2024 The HAKES Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "hakes-store/grpc_api";

package hakes_store;


service StoreDaemon {
  rpc ScheduleJob (JobRequest) returns (JobReply) {}  
  rpc GetStats (StatsRequest) returns (StatsReply) {}
}

enum JobType {
  COMPACTION = 0;
  SCHEDULED = 1; // already schdeduled. should not further reschedule.
}

message JobRequest {
  JobType type = 1;
  string jobId = 2;
  bytes payload = 3;
}

message JobReply {
  bool success = 1;
  bytes payload = 2;
}

// can be a composite of multiple stats types
message StatsRequest {
  string payload = 1;
}

message StatsReply {
  message StatsEntry {
    float avail = 1;
    uint64 total = 2;
  }
  bool success = 1;
  StatsEntry cpu = 2;
  StatsEntry mem = 3;
  StatsEntry net = 4;
}